--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -1,8 +1,35 @@
 .greeting {
     margin-bottom: 12px;
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    unicode-bidi: isolate;
+  }
+  
+  .greeting.hide-cursor::after {
+    content: ''; /* Elimina el cursor */
+    display: none; /* Asegúrate de que el cursor esté oculto */
+  }
+  
+/* Añadimos una animación llamada fade-slide-in */
+@keyframes fade-slide-in {
+    0% {
+        opacity: 0;
+        transform: translateY(20px); /* Desplaza el contenedor hacia abajo al iniciar */
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0); /* Devuelve el contenedor a su posición original */
+    }
 }
 
+/* Aplicamos la animación al contenedor del banner */
 .contenedor {
+    animation: fade-slide-in 1s ease-out; /* 1s es la duración de la animación */
     background: #4f6dcf;
     width: 1200px;
     height: 220px;
@@ -12,6 +39,7 @@
     display: flex;
     align-items: center;
 }
+
   
 .text-content {
     padding: 45px;
@@ -47,3 +75,87 @@
     cursor: pointer;
 }
 
+
+/* Efecto de entrada suave */
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    transform: translateY(20px); /* Desplaza hacia abajo */
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0); /* Retorna a la posición original */
+  }
+}
+  
+.card-container > * {
+  animation: fade-in 1s ease-out; /* Aplica el fade-in al cargar la página */
+}
+
+.doctors {
+  display: flex;
+  flex-direction: column;
+}
+
+.doctors button {
+  --primary-color: #4f6dcf;
+  --secondary-color: #fff;
+  --hover-color: #3e61d5;
+  --arrow-width: 10px;
+  --arrow-stroke: 2px;
+  cursor: pointer;
+  align-self: center;
+  margin-top: 30px;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 20px;
+  color: var(--secondary-color);
+  padding: .7em 1.8em;
+  background: var(--primary-color);
+  display: flex;
+  transition: 0.2s background;
+  align-items: center;
+  gap: 0.6em;
+  font-weight: bold;
+}
+
+.doctors button .arrow-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.doctors button .arrow {
+  margin-top: 1px;
+  width: var(--arrow-width);
+  background: var(--primary-color);
+  height: var(--arrow-stroke);
+  position: relative;
+  transition: 0.2s;
+}
+
+.doctors button .arrow::before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  border: solid var(--secondary-color);
+  border-width: 0 var(--arrow-stroke) var(--arrow-stroke) 0;
+  display: inline-block;
+  top: -3px;
+  right: 3px;
+  transition: 0.2s;
+  padding: 3px;
+  transform: rotate(-45deg);
+}
+
+.doctors button:hover {
+  background-color: var(--hover-color);
+}
+
+.doctors button:hover .arrow {
+  background: var(--secondary-color);
+}
+
+.doctors button:hover .arrow:before {
+  right: 0;
+}
