--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,6 +5,24 @@ a {
   text-decoration: none;
 }
 
+.app-container {
+  display: flex;
+}
+
+.main-content {
+  flex-grow: 1;
+  margin-left: 250px; /* Ancho del sidebar cuando está abierto */
+  transition: margin-left 0.3s ease;
+}
+
+.sidebar.close + .main-content {
+  margin-left: 88px; /* Ancho del sidebar cuando está cerrado */
+}
+
+a {
+  text-decoration: none;
+}
+
 .sidebar {
   position: fixed;
   top: 0;
@@ -16,6 +34,7 @@ a {
   transition: all 0.3s ease;
   z-index: 100;
 }
+
 .sidebar.close {
   width: 88px;
 }
@@ -46,7 +65,7 @@ a {
 
 .sidebar .text,
 .sidebar .icon {
-  color: #707070;
+  color: #0000008c;
   transition: all 0.3s ease;
 }
 
@@ -102,13 +121,13 @@ header .image-text .profession {
   transform: translateY(-50%) rotate(180deg);
   height: 25px;
   width: 25px;
-  background-color: #2760a7;
+  background-color: #4f6dcf;
   color: #fff;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 15px;
+  font-size: 14px;
   cursor: pointer;
   transition: all 0.3s ease;
 }
