--- a/src/views/Register/Register.css
+++ b/src/views/Register/Register.css
@@ -1,11 +1,4 @@
-form {
-    width: 500px;
-    margin: 40px auto;
-    padding: 20px;
-    background-color: #f4f4f4;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
+
   
   label {
     display: block;
@@ -14,17 +7,8 @@ form {
     font-weight: bold;
   }
   
-  input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-  
   .register-button {
-    background-color: #2760a7;
+    background-color: #4f6dcf;
     color: white;
     padding: 10px 20px;
     margin-top:15px;
