--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -56,7 +56,7 @@ a {
 .sidebar .icon {
   min-width: 60px;
   border-radius: 6px;
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -173,7 +173,7 @@ header .image-text .profession {
 }
 
 .sidebar li a:hover {
-  background-color: #2760a7;
+  background-color: #4f6dcf;
 }
 .sidebar li a:hover .icon,
 .sidebar li a:hover .text {
