--- a/src/views/Appointments/Appointments.css
+++ b/src/views/Appointments/Appointments.css
@@ -170,7 +170,7 @@ th,td {
 .appointments-table .appointments-table-container {
     width: 800px;
     margin: 40px auto;
-    padding: 20px;
+    /* padding: 20px; */
     background-color: #f7f9fc; /* Fondo gris claro */
     border-radius: 16px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.05); /* Sombra suave */
@@ -183,11 +183,14 @@ th,td {
     font-family: 'Inter', sans-serif; /* Fuente moderna */
     font-size: 16px;
     color: #333;
+    border-spacing: 0;
+    overflow: hidden;
+    border-radius: 16px;
   }
   
   /* Estilos para las celdas de encabezado de la tabla */
   .appointments-table .appointments-table th {
-    padding: 16px;
+    padding: 15px 24px;
     background-color: #fafafa; /* Fondo blanco */
     color: #555;
     border-bottom: 2px solid #e3e6eb; /* Línea separadora sutil */
@@ -197,7 +200,7 @@ th,td {
   
   /* Estilos para las celdas de la tabla */
   .appointments-table .appointments-table td {
-    padding: 12px 16px;
+    padding: 15px 24px;
     border-bottom: 1px solid #e3e6eb; /* Línea separadora sutil */
   }
   
